Update required vercel env variables

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,22 @@
-# Prepr CMS Configuration
-# Get your GraphQL URL from your Prepr environment settings
+# Prepr CMS Configuration (Required)
 PREPR_GRAPHQL_URL=https://graphql.prepr.io/YOUR_ACCESS_TOKEN
-PREPR_ENV=preview
+# OR use PREPR_GRAPHQL_TOKEN instead
+# PREPR_GRAPHQL_TOKEN=your_access_token_here
 
-# Site Configuration
-SITE_URL=http://localhost:3000
+# Prepr Environment (optional, set to 'preview' for preview mode)
+PREPR_ENV=production
 
-# Mailchimp Configuration
-# Get these from your Mailchimp account settings
-MAILCHAMP_API_KEY=your-mailchimp-api-key-here
-MAILCHIMP_API_SERVER=us12
-MAILCHIMP_AUDIENCE_ID=your-audience-id-here
+# Application Environment
+APP_ENV=production
+NODE_ENV=production
 
-# HubSpot Configuration
-# Find this in your HubSpot account settings
-HUBSPOT_PORTAL_ID=your-hubspot-portal-id
+# Site URL (required for sitemap generation)
+SITE_URL=https://your-domain.com
 
-# Optional: For production deployment
-# NEXT_PUBLIC_VERCEL_URL=your-domain.com
+# HubSpot Integration (optional - for contact forms)
+HUBSPOT_PORTAL_ID=your_hubspot_portal_id
+
+# Mailchimp Integration (optional - for newsletter)
+MAILCHAMP_API_KEY=your_mailchimp_api_key
+MAILCHIMP_API_SERVER=us1
+MAILCHIMP_AUDIENCE_ID=your_audience_id
