--- a/package.json
+++ b/package.json
@@ -1,51 +1,64 @@
 {
-  "name": "acme-lease",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "npm run codegen && next build",
-    "start": "next start",
-    "lint": "next lint",
-    "codegen": "graphql-codegen --config codegen.ts"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.12.10",
-    "@apollo/experimental-nextjs-app-support": "^0.11.8",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-    "@graphql-codegen/typescript-resolvers": "^4.4.2",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@headlessui/react": "^2.2.0",
-    "@preprio/prepr-nextjs": "2.1.2",
-    "@vercel/stega": "^0.1.2",
-    "clsx": "^2.1.1",
-    "graphql": "^16.10.0",
-    "js-cookie": "^3.0.5",
-    "motion": "^12.4.1",
-    "next": "^15.3.1",
-    "next-intl": "^3.26.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.4.0",
-    "swiper": "^11.2.2",
-    "tailwind-merge": "^3.0.1",
-    "zod": "^3.24.2"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "5.0.4",
-    "@graphql-codegen/client-preset": "^4.6.1",
-    "@graphql-codegen/introspection": "4.0.3",
-    "@graphql-codegen/typescript": "^4.1.6",
-    "@graphql-codegen/typescript-operations": "^5.0.2",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/js-cookie": "^3.0.6",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
-  }
+    "name": "acme-lease",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "npm run codegen && next build",
+        "start": "next start",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+        "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+        "codegen": "graphql-codegen --config codegen.ts"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.12.10",
+        "@apollo/experimental-nextjs-app-support": "^0.11.8",
+        "@graphql-codegen/typescript-react-apollo": "^4.3.2",
+        "@graphql-codegen/typescript-resolvers": "^4.4.2",
+        "@graphql-typed-document-node/core": "^3.2.0",
+        "@headlessui/react": "^2.2.0",
+        "@preprio/prepr-nextjs": "2.1.2",
+        "@vercel/stega": "^0.1.2",
+        "clsx": "^2.1.1",
+        "graphql": "^16.10.0",
+        "js-cookie": "^3.0.5",
+        "motion": "^12.4.1",
+        "next": "^15.3.1",
+        "next-intl": "^3.26.4",
+        "react": "^19.1.0",
+        "react-dom": "^19.1.0",
+        "react-hot-toast": "^2.5.1",
+        "react-icons": "^5.4.0",
+        "swiper": "^11.2.2",
+        "tailwind-merge": "^3.0.1",
+        "zod": "^3.24.2"
+    },
+    "devDependencies": {
+        "@graphql-codegen/cli": "5.0.4",
+        "@graphql-codegen/client-preset": "^4.6.1",
+        "@graphql-codegen/introspection": "4.0.3",
+        "@graphql-codegen/typescript": "^4.1.6",
+        "@graphql-codegen/typescript-operations": "^5.0.2",
+        "@tailwindcss/postcss": "^4.1.17",
+        "@tailwindcss/typography": "^0.5.16",
+        "@types/js-cookie": "^3.0.6",
+        "@types/node": "^20",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "@typescript-eslint/eslint-plugin": "^8.46.3",
+        "@typescript-eslint/parser": "^8.46.3",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "15.3.1",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "postcss": "^8",
+        "prettier": "^3.4.2",
+        "prettier-plugin-tailwindcss": "^0.7.1",
+        "tailwindcss": "^4.1.17",
+        "typescript": "^5.7.3"
+    }
 }
