--- a/package.json
+++ b/package.json
@@ -14,21 +14,16 @@
     },
     "dependencies": {
         "@apollo/client": "^3.12.10",
-        "@apollo/experimental-nextjs-app-support": "^0.11.8",
-        "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-        "@graphql-codegen/typescript-resolvers": "^4.4.2",
         "@graphql-typed-document-node/core": "^3.2.0",
         "@headlessui/react": "^2.2.0",
         "@preprio/prepr-nextjs": "2.1.2",
         "@vercel/stega": "^0.1.2",
         "clsx": "^2.1.1",
         "graphql": "^16.10.0",
-        "js-cookie": "^3.0.5",
-        "motion": "^12.4.1",
-        "next": "^15.3.1",
-        "next-intl": "^3.26.4",
-        "react": "^19.1.0",
-        "react-dom": "^19.1.0",
+        "next": "16.0.1",
+        "next-intl": "^4.5.0",
+        "react": "19.2.0",
+        "react-dom": "19.2.0",
         "react-hot-toast": "^2.5.1",
         "react-icons": "^5.4.0",
         "swiper": "^11.2.2",
@@ -43,14 +38,13 @@
         "@graphql-codegen/typescript-operations": "^5.0.2",
         "@tailwindcss/postcss": "^4.1.17",
         "@tailwindcss/typography": "^0.5.16",
-        "@types/js-cookie": "^3.0.6",
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "19.2.2",
+        "@types/react-dom": "19.2.2",
         "@typescript-eslint/eslint-plugin": "^8.46.3",
         "@typescript-eslint/parser": "^8.46.3",
         "eslint": "^8.57.0",
-        "eslint-config-next": "15.3.1",
+        "eslint-config-next": "16.0.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.5",
@@ -60,5 +54,11 @@
         "prettier-plugin-tailwindcss": "^0.7.1",
         "tailwindcss": "^4.1.17",
         "typescript": "^5.7.3"
+    },
+    "pnpm": {
+        "overrides": {
+            "@types/react": "19.2.2",
+            "@types/react-dom": "19.2.2"
+        }
     }
 }
