--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "acme-lease",
+    "name": "acme-lease-open",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -13,50 +13,50 @@
         "codegen": "graphql-codegen --config codegen.ts"
     },
     "dependencies": {
-        "@apollo/client": "^3.14.0",
+        "@apollo/client": "^4.0.11",
         "@graphql-typed-document-node/core": "^3.2.0",
         "@headlessui/react": "^2.2.9",
-        "@preprio/prepr-nextjs": "2.1.2",
-        "@vercel/stega": "^0.1.2",
+        "@preprio/prepr-nextjs": "2.1.3",
+        "@vercel/stega": "^1.0.0",
         "clsx": "^2.1.1",
         "graphql": "^16.12.0",
-        "next": "16.0.10",
-        "next-intl": "^4.5.1",
+        "next": "16.1.1",
+        "next-intl": "^4.7.0",
         "react": "19.2.3",
         "react-dom": "19.2.3",
         "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
-        "swiper": "^11.2.10",
+        "swiper": "^12.0.3",
         "tailwind-merge": "^3.4.0",
-        "zod": "^3.25.76"
+        "zod": "^4.3.5"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3.3.1",
-        "@eslint/js": "^9.39.1",
-        "@graphql-codegen/cli": "5.0.4",
-        "@graphql-codegen/client-preset": "^4.8.3",
-        "@graphql-codegen/introspection": "4.0.3",
-        "@graphql-codegen/typescript": "^4.1.6",
-        "@graphql-codegen/typescript-operations": "^5.0.2",
-        "@tailwindcss/postcss": "^4.1.17",
+        "@eslint/eslintrc": "^3.3.3",
+        "@eslint/js": "^9.39.2",
+        "@graphql-codegen/cli": "6.1.0",
+        "@graphql-codegen/client-preset": "^5.2.2",
+        "@graphql-codegen/introspection": "5.0.0",
+        "@graphql-codegen/typescript": "^5.0.7",
+        "@graphql-codegen/typescript-operations": "^5.0.7",
+        "@tailwindcss/postcss": "^4.1.18",
         "@tailwindcss/typography": "^0.5.19",
-        "@types/node": "^20.19.24",
-        "@types/react": "19.2.2",
-        "@types/react-dom": "19.2.2",
-        "@typescript-eslint/eslint-plugin": "^8.46.4",
-        "@typescript-eslint/parser": "^8.46.4",
-        "eslint": "^9.39.1",
-        "eslint-config-next": "16.0.1",
+        "@types/node": "^25.0.3",
+        "@types/react": "19.2.7",
+        "@types/react-dom": "19.2.3",
+        "@typescript-eslint/eslint-plugin": "^8.52.0",
+        "@typescript-eslint/parser": "^8.52.0",
+        "eslint": "^9.39.2",
+        "eslint-config-next": "16.1.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-jsx-a11y": "^6.10.2",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^7.0.1",
         "postcss": "^8.5.6",
-        "prettier": "^3.6.2",
-        "prettier-plugin-tailwindcss": "^0.7.1",
-        "tailwindcss": "^4.1.17",
+        "prettier": "^3.7.4",
+        "prettier-plugin-tailwindcss": "^0.7.2",
+        "tailwindcss": "^4.1.18",
         "typescript": "^5.9.3",
-        "typescript-eslint": "^8.46.4"
+        "typescript-eslint": "^8.52.0"
     },
     "pnpm": {
         "overrides": {
